anchor: href & style

--- a/index.css
+++ b/index.css
@@ -67,4 +67,8 @@ div.group :nth-child(2) {
 
 div.group > a {
 	background-color: skyblue;
+	user-select: none;
+	padding: 5px;
+	text-decoration: none;
+	color: black;
 }
