--- a/index.css
+++ b/index.css
@@ -9,11 +9,36 @@ html, body {
 	height: 100%;
 }
 
+:root {
+	--main-bg-color: #180053;#180053;
+}
+
+@keyframes slidein-title {
+	from {
+		transform: translate(100%);
+		opacity: 0;
+	} to {
+		transform: translate(0, 0);
+		opacity: 1;
+	}
+}
+
+@keyframes slidein-film {
+	from, 38% {
+		transform: translate(15%);
+		opacity: 0;
+	} to {
+		transform: translate(0, 0);
+		opacity: 1;
+	}
+}
+
 div.content {
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	background-color: var(--main-bg-color, indigo);
 }
 
 nav.page-header {
@@ -24,8 +49,10 @@ nav.page-header {
 h1.title {
 	width: min-content;
 	font-size: xxx-large;
-	display: inline;
+	font-weight: lighter;
 	user-select: none;
+	color: white;
+	animation: 1s cubic-bezier(0.19, 1, 0.22, 1) 0s slidein-title;
 }
 
 div.window {
@@ -40,6 +67,7 @@ div.film {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	animation: 1.38s cubic-bezier(0.19, 1, 0.22, 1) 0s slidein-film;
 }
 
 div.film > * {
@@ -48,8 +76,11 @@ div.film > * {
 
 div.group {
 	display: grid;
+	height: 50%;
+	min-height: min-content;
+	max-height: 367px;
 	grid-auto-flow: column;
-	grid-auto-rows: 180px;
+	grid-auto-rows: 1fr;
 	grid-auto-columns: 180px;
 	gap: 7px;
 	margin: 0 80px;
@@ -66,7 +97,7 @@ div.group :nth-child(2) {
 }
 
 div.group > a {
-	background-color: skyblue;
+	background-color: lightblue;
 	user-select: none;
 	padding: 5px;
 	text-decoration: none;
