--- a/index.css
+++ b/index.css
@@ -96,10 +96,25 @@ div.group :nth-child(2) {
 	grid-row: 1 / 2;
 }
 
+div.group :nth-child(4n+1) {
+	background-color: #2c86ee;
+}
+
+div.group :nth-child(4n+2) {
+	background-color: #bb1d48;
+}
+
+div.group :nth-child(4n+3) {
+	background-color: #00a000;
+}
+div.group :nth-child(4n+4) {
+	background-color: #643ebe;
+}
+
 div.group > a {
 	background-color: lightblue;
 	user-select: none;
 	padding: 5px;
 	text-decoration: none;
-	color: black;
+	color: white;
 }
