--- a/index.css
+++ b/index.css
@@ -10,12 +10,12 @@ html, body {
 }
 
 :root {
-	--main-bg-color: #180053;#180053;
+	--main-bg-color: #180053;
 }
 
 @keyframes slidein-title {
 	from {
-		transform: translate(100%);
+		transform: translate(36px);
 		opacity: 0;
 	} to {
 		transform: translate(0, 0);
@@ -25,7 +25,7 @@ html, body {
 
 @keyframes slidein-film {
 	from, 38% {
-		transform: translate(15%);
+		transform: translate(56px);
 		opacity: 0;
 	} to {
 		transform: translate(0, 0);
@@ -96,7 +96,7 @@ div.group :nth-child(2) {
 	grid-row: 1 / 2;
 }
 
-div.group :nth-child(4n+1) {
+/*div.group :nth-child(4n+1) {
 	background-color: #2c86ee;
 }
 
@@ -109,10 +109,9 @@ div.group :nth-child(4n+3) {
 }
 div.group :nth-child(4n+4) {
 	background-color: #643ebe;
-}
+}*/
 
 div.group > a {
-	background-color: lightblue;
 	user-select: none;
 	padding: 5px;
 	text-decoration: none;
