--- a/index.css
+++ b/index.css
@@ -117,3 +117,50 @@ div.group > a {
 	text-decoration: none;
 	color: white;
 }
+
+@media screen and (max-width: 428px) and (orientation: portrait) {
+	nav.page-header {
+		padding: 30px 40px;
+	}
+
+	div.film {
+		flex-direction: column;
+    height: min-content;
+    width: 100%;
+		padding: 0 0 30px 40px;
+	}
+
+	div.group {
+		grid-auto-flow: row;
+		grid-auto-rows: 100px;
+		grid-auto-columns: 100px;
+		height: min-content;
+		width: 100%;
+		margin: 40px 0;
+	}
+
+	div.group :nth-child(2) {
+		grid-column: 3 / 4;
+		grid-row: 1 / 2;
+	}
+
+	@keyframes slidein-title {
+		from {
+			transform: translate(0,36px);
+			opacity: 0;
+		} to {
+			transform: translate(0, 0);
+			opacity: 1;
+		}
+	}
+
+	@keyframes slidein-film {
+		from, 38% {
+			transform: translate(0,56px);
+			opacity: 0;
+		} to {
+			transform: translate(0, 0);
+			opacity: 1;
+		}
+	}
+}
