--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ html, body {
 
 :root {
 	--main-bg-color: #180053;
+	--ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 @keyframes slidein-title {
@@ -44,6 +45,7 @@ div.content {
 nav.page-header {
 	height: min-content;
 	padding: 60px 80px;
+	transition: padding 1s var(--ease-out-expo);
 }
 
 h1.title {
@@ -52,7 +54,7 @@ h1.title {
 	font-weight: lighter;
 	user-select: none;
 	color: white;
-	animation: 1s cubic-bezier(0.19, 1, 0.22, 1) 0s slidein-title;
+	animation: 1s var(--ease-out-expo) slidein-title;
 }
 
 div.window {
@@ -67,7 +69,7 @@ div.film {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	animation: 1.38s cubic-bezier(0.19, 1, 0.22, 1) 0s slidein-film;
+	animation: 1.38s var(--ease-out-expo) slidein-film;
 }
 
 div.film > * {
@@ -76,7 +78,7 @@ div.film > * {
 
 div.group {
 	display: grid;
-	height: 50%;
+	height: 367px;
 	min-height: min-content;
 	max-height: 367px;
 	grid-auto-flow: column;
@@ -84,6 +86,11 @@ div.group {
 	grid-auto-columns: 180px;
 	gap: 7px;
 	margin: 0 80px;
+}
+
+div.group > * {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 div.group :first-child {
@@ -96,21 +103,6 @@ div.group :nth-child(2) {
 	grid-row: 1 / 2;
 }
 
-/*div.group :nth-child(4n+1) {
-	background-color: #2c86ee;
-}
-
-div.group :nth-child(4n+2) {
-	background-color: #bb1d48;
-}
-
-div.group :nth-child(4n+3) {
-	background-color: #00a000;
-}
-div.group :nth-child(4n+4) {
-	background-color: #643ebe;
-}*/
-
 div.group > a {
 	user-select: none;
 	padding: 5px;
@@ -118,16 +110,16 @@ div.group > a {
 	color: white;
 }
 
-@media screen and (max-width: 428px) and (orientation: portrait) {
+@media screen and (max-width: 600px) {
 	nav.page-header {
 		padding: 30px 40px;
 	}
 
 	div.film {
 		flex-direction: column;
-    height: min-content;
-    width: 100%;
-		padding: 0 0 30px 40px;
+		height: min-content;
+		width: 100%;
+		padding: 0 0 30px 0;
 	}
 
 	div.group {
@@ -135,7 +127,7 @@ div.group > a {
 		grid-auto-rows: 100px;
 		grid-auto-columns: 100px;
 		height: min-content;
-		width: 100%;
+		width: min-content;
 		margin: 40px 0;
 	}
 
