--- a/css/post.css
+++ b/css/post.css
@@ -23,10 +23,29 @@ main {
 article {
 	font-size: larger;
 	animation: 1.2s var(--ease-out-expo) slidein;
+	padding-bottom: 2em;
 }
 
 article p {
-	margin: 0 0 30px 0;
+	margin: 0 0 1em 0;
+}
+
+article h1 {
+	font-size: xxx-large;
+	font-weight: lighter;
+	margin: 1em 0;
+}
+
+article h2 {
+	font-size: xx-large;
+	font-weight: lighter;
+	margin: 1em 0;
+}
+
+article h3 {
+	font-size: x-large;
+	font-weight: normal;
+	margin: 1em 0;
 }
 
 article img {
@@ -36,5 +55,5 @@ article img {
 
 article blockquote {
 	border-left: 4px solid lightgray;
-	padding-left: 15px;
+	padding-left: 1em;
 }
