--- a/css/post.css
+++ b/css/post.css
@@ -44,7 +44,7 @@ article h2 {
 
 article h3 {
 	font-size: x-large;
-	font-weight: normal;
+	font-weight: lighter;
 	margin: 1em 0;
 }
 
@@ -56,4 +56,8 @@ article img {
 article blockquote {
 	border-left: 4px solid lightgray;
 	padding-left: 1em;
+}
+
+article span.italic {
+	font-style: italic;
 }
