--- a/css/post.css
+++ b/css/post.css
@@ -58,6 +58,7 @@ article blockquote {
 	padding-left: 1em;
 }
 
-article span.italic {
-	font-style: italic;
+article code {
+	background-color: #e5e5e5;
+	font-family: monospace;
 }
