--- a/css/base.css
+++ b/css/base.css
@@ -1,18 +1,19 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
 	box-sizing: border-box;
 }
 
 html, body {
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 
 :root {
 	--main-bg-color: #fff;
 	--ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+	font-family: sans-serif;
 }
 
 ::selection {
@@ -40,6 +41,8 @@ nav {
 	height: min-content;
 	padding: 60px 0;
 	animation: 1s var(--ease-out-expo) slidein;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 h1.title {
