--- a/css/base.css
+++ b/css/base.css
@@ -7,7 +7,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
+	overflow: auto;
 }
 
 :root {
@@ -29,12 +29,34 @@ a:active {
 	color: gray;
 }
 
-div.content {
+div#navigation {
+	display: block;
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+	z-index: 1;
+	transition: opacity 0.2s linear;
+	background-color: var(--main-bg-color);
+	opacity: 0;
+	pointer-events: none;
+}
+
+div#navigation.activated {
+	opacity: 1;
+	pointer-events: auto;
+}
+
+nav {
+	display: flex;
+}
+
+div#content {
 	width: 100%;
 	height: 100%;
+	z-index: 0;
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	background-color: var(--main-bg-color, white);
 }
 
 nav {
@@ -43,6 +65,10 @@ nav {
 	animation: 1s var(--ease-out-expo) slidein;
 	text-overflow: ellipsis;
 	overflow: hidden;
+}
+
+div.separator {
+	flex-grow: 1;
 }
 
 h1.title {
