--- a/css/post.css
+++ b/css/post.css
@@ -1,35 +1,5 @@
-:root {
-	--figureBgColor: #333;
-}
-
-@keyframes slidein {
-	from, 17% {
-		transform: translate(0, 36px);
-		opacity: 0;
-	} to {
-		transform: translate(0, 0);
-		opacity: 1;
-	}
-}
-
-body > div {
-	align-items: center;
-	width: 100vw;
-}
-
-div.wrapper {
-	width: var(--pageWidth);
-}
-
-div.title-wrapper {
-	display: flex;
-	flex-direction: column;
-}
-
-article {
+#contents {
 	font-size: larger;
-	animation: 1.2s var(--easeOutExpo) slidein;
-	padding-bottom: 2.5em;
 }
 
 article p,ol,ul,hr,table,dl {
@@ -66,9 +36,19 @@ article blockquote {
 	padding-left: 1em;
 }
 
+article figure table {
+	background-color: var(--codeBgColor);
+	color: var(--codeFgColor);
+	--selectBgColor: white;
+	--selectFgColor: black;
+}
+
 article code {
-	background-color: #e5e5e5;
-	font-family: monospace;
+	background-color: var(--codeBgColor);
+	color: var(--codeFgColor);
+	padding: 0 0.12em;
+	--selectBgColor: white;
+	--selectFgColor: black;
 }
 
 article ol,ul {
@@ -106,17 +86,6 @@ article dl dd::before {
 article input[type="checkbox"] {
 	width: 1.2em;
 	height: 1.2em;
-}
-
-article figure {
-	background-color: var(--figureBgColor);
-	color: white;
-	line-height: 1.08em;
-}
-
-article figure ::selection {
-	background-color: white;
-	color: black;
 }
 
 article figure pre {
