--- a/css/base.css
+++ b/css/base.css
@@ -5,8 +5,8 @@
 }
 
 html, body {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background-color: var(--bgColor);
 }
 
@@ -164,7 +164,7 @@ div.titleWrapper {
 }
 
 body > div {
-	width: 100vw;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
