--- a/css/base.css
+++ b/css/base.css
@@ -7,7 +7,6 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	background-color: var(--bgColor);
 }
 
 @keyframes slidein {
@@ -35,7 +34,7 @@ html, body {
 	}
 }
 
-@media (prefers-reduced-motion: reduce) {
+@media screen and (prefers-reduced-motion: reduce) {
 	*:not(nav#navigation, nav#navigation li, #contents) {
 		animation: none !important;
 		transition: none !important;
@@ -55,16 +54,19 @@ html, body {
 }
 
 :root {
-	--bgColor: white;
+	--bgColor: #f0f0f0;
 	--fgColor: black;
-	--fgSecondary: grey;
+	--bgSecondary: lightgrey;
+	--fgSecondary: #555;
 	--selectBgColor: black;
-	--selectFgColor: white;
+	--selectFgColor: #f0f0f0;
 	--codeBgColor: #333;
 	--codeFgColor: white;
 	--easeOutExpo: cubic-bezier(0.19, 1, 0.22, 1);
 	--pagePadding: 80px;
 	--pageWidth: min(870px, 87%);
+	background-color: var(--bgColor);
+	color: var(--fgColor);
 	font-family: sans-serif;
 }
 
@@ -94,7 +96,7 @@ button {
 }
 
 button:hover {
-	filter: brightness(0.93);
+	background-color: #dfdfdf;
 }
 
 button:active {
@@ -124,8 +126,8 @@ button#navigationToggle.activated:active {
 	background-image: url('/images/close_light.svg');
 }
 
-a { color: black; }
-a:hover { color: #555; }
+a { color: var(--fgColor); }
+a:hover { color: var(--fgSecondary); }
 a:active { color: #888; }
 
 nav#navigation {
