--- a/css/base.css
+++ b/css/base.css
@@ -9,12 +9,10 @@ html, body {
 	height: 100%;
 }
 
-@keyframes slidein {
+@keyframes fadein {
 	from, 17% {
-		transform: translate(0, 36px);
 		opacity: 0;
 	} to {
-		transform: translate(0, 0);
 		opacity: 1;
 	}
 }
@@ -172,7 +170,7 @@ nav#navigation a { text-decoration: none; }
 
 #contents {
 	font-size: larger;
-	animation: 1.2s var(--easeOutExpo) slidein;
+	animation: .3s linear fadein;
 	transition: opacity .1s linear;
 	padding-bottom: 2.5em;
 	overflow: clip;
@@ -198,7 +196,7 @@ header {
 	display: flex;
 	height: min-content;
 	padding: 60px 0;
-	animation: 1s var(--easeOutExpo) slidein;
+	animation: .3s linear fadein;
 	text-overflow: ellipsis;
 	overflow: hidden;
 }
