--- a/css/base.css
+++ b/css/base.css
@@ -65,7 +65,7 @@ html, body {
 	--pageWidth: min(870px, 87%);
 	background-color: var(--bgColor);
 	color: var(--fgColor);
-	font-family: 'Roboto', sans-serif;
+	font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	font-display: swap;
 	overflow-y: scroll;
 	scrollbar-color: var(--fgSecondary) var(--bgColor);
